<resources>
    <string name="app_name">EX3</string>
    <string name="name">name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_btn">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="nickname">Nickname</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="addprofilepic">Add Profile Picture</string>
    <string name="add">Add</string>
    <string name="add_friend">Add friend</string>
    <string name="settings">settings</string>
    <string name="userslist">UsersList</string>
</resources>